<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostAddActivity">


    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/toolbar_bg02">
        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_white"
            android:background="@android:color/transparent"
            android:paddingRight="10dp"
            android:adjustViewBounds="true"
            app:tint="?attr/colorOnPrimary" />


        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarBackBtn"
            android:text="@string/post_ad_title2"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            android:layout_marginStart="15dp"/>

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:id="@+id/toolbarSubtitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/toolbarTitleTv"
            android:textColor="?attr/colorOnPrimary"
            android:layout_toStartOf="@+id/toolbarAssetTv"
            android:text="@string/reach_buyers_or_tenants"/>

        <ImageView
            android:id="@+id/toolbarAssetTv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/buliding_asset01"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="17dp"
                android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:layout_above="@+id/submitBtn"
        android:layout_below="@+id/toolbarRl">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose"/>

            <RadioGroup
                android:id="@+id/purposeRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/purposeSellRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/purposeRentRb"
                    android:layout_width="wrap_content"
                    android:text="@string/rent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/type"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/propertyCategoryTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/home_black"
                    android:text="@string/category_homes"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/plot_gray"
                    android:text="@string/category_plots"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/store_gray"
                    android:text="@string/category_commercial"/>
            </com.google.android.material.tabs.TabLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/propertySubCategoryTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/property_subcategory"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:startIconDrawable="@drawable/category_gray">

                <AutoCompleteTextView
                    android:id="@+id/propertySubcategoryAct"
                    android:paddingStart="45dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/specifications"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/floorsTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/floors"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/building_gray"
                >

                <EditText
                    android:id="@+id/foorsEt"
                    android:paddingStart="45dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bedroomsTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bedrooms"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/bed_gray">

                <EditText
                    android:id="@+id/bedroomsEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bathRoomsTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bathrooms"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/bathtub_gray">

                <EditText
                    android:id="@+id/bathRoomsEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/areaSizeTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area_size"
                    android:layout_weight="1"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:startIconDrawable="@drawable/area_size_gray">

                    <EditText
                        android:id="@+id/areaSizeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="45dp"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/areaSizeUnitTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:hint="@string/sq_ft"
                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/areaSizeUnitAc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>


                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/location"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:startIconDrawable="@drawable/location_gray"
                >

                <AutoCompleteTextView
                    android:id="@+id/locationAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:inputType="none"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/wallet_gray">

                <EditText
                    android:id="@+id/priceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/propertyDetailsLabelTv"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginTop="5dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/title_gray">

                <EditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/description_gray">

                <EditText
                    android:id="@+id/titledescriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:inputType="textCapSentences|textImeMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/email_black">
                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_vertical"
               android:orientation="horizontal">
               <com.hbb20.CountryCodePicker
                   android:id="@+id/phoneCodeTil"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="8dp"
                   android:layout_gravity="center"
                   android:minWidth="60dp"
                   app:ccp_autoDetectCountry="true"
                   app:ccp_contentColor="@color/colorGray81"
                   app:ccp_rememberLastSelection="true"
                   app:ccp_showFlag="false"
                   app:ccp_showNameCode="false"/>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/phoneNumberTil"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/phone_number"
                   app:boxCornerRadiusTopStart="8dp"
                   app:boxCornerRadiusTopEnd="8dp"
                   app:boxCornerRadiusBottomStart="8dp"
                   app:boxCornerRadiusBottomEnd="8dp"
                   app:startIconDrawable="@drawable/phone_black">
                   <EditText
                       android:id="@+id/phoneNumberEt"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:paddingStart="45dp"
                       android:inputType="phone"/>
               </com.google.android.material.textfield.TextInputLayout>
           </LinearLayout>

         <TextView
             android:id="@+id/pickImagesTv"
             style="@style/TextAppearance.Material3.TitleMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/pick_images"
             android:drawableStart="@drawable/add_photo"
             android:drawablePadding="5dp"
             android:paddingVertical="5dp"
             android:gravity="center_vertical"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spanCount="4"
                tools:listitem="@layout/row_images_picked"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/post_ad_title2"
        android:minHeight="@dimen/m_button_height"/>


</RelativeLayout>